<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_epic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/radius_normal"
    app:cardElevation="@dimen/elevation_small"
    app:strokeWidth="@dimen/stroke_width_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ver_epic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/verison_epic"
                    app:layout_constraintBottom_toTopOf="@+id/img_epic"
                    app:layout_constraintEnd_toStartOf="@+id/date_epic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/date_epic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_epic"
                    app:layout_constraintBottom_toTopOf="@+id/img_epic"
                    app:layout_constraintStart_toEndOf="@+id/ver_epic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_epic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/no_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/identifier_epic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/identifier_epic"
                    android:paddingLeft="@dimen/padding_left_epic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_epic" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>